added expansion coefficient

--- a/configs/queries/ap8889.cfg
+++ b/configs/queries/ap8889.cfg
@@ -601,5 +601,6 @@ polit campaign financ
 </text>
 </query>
 <count>1000</count>
+<threads>32</threads>
 <trecFormat>true</trecFormat>
 </parameters>
